fix horizontal scrollbar appearing bug due to AOS library

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 html,
 body {
     scroll-behavior: smooth;
+    overflow-x: clip;
 }
 
 html {
@@ -1086,6 +1087,7 @@ input:-webkit-autofill {
 }
 
 .footer-copyright__desc {
+    margin-top: 0;
     color: var(--white);
     text-align: center;
 }
